[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/pause_menu.gd" type="Script" id=2]

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0, 0, 0, 0.470588 )

[node name="continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -50.0
margin_right = 40.0
margin_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 1 )
text = "Продолжить"
icon_align = 1
expand_icon = true

[node name="play_again" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 1 )
text = "Заново"
icon_align = 1
expand_icon = true

[node name="main_menu" type="Button" parent="."]
margin_left = 120.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 1 )
text = "Главное меню"
icon_align = 1
expand_icon = true

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
